--- a/integ-gatein/pom.xml
+++ b/integ-gatein/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.exoplatform.integration</groupId>
     <artifactId>integ</artifactId>
-    <version>1.0.10</version>
+    <version>1.0.11-SNAPSHOT</version>
   </parent>
   <artifactId>integ-gatein</artifactId>
   <packaging>pom</packaging>
