--- a/pom.xml
+++ b/pom.xml
@@ -39,15 +39,15 @@
     <!-- **************************************** -->
     <!-- Project Dependencies                     -->
     <!-- **************************************** -->
-    <org.exoplatform.calendar.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.calendar.version>
+    <org.exoplatform.calendar.version>4.0.0.Alpha1-unified-search-SNAPSHOT</org.exoplatform.calendar.version>
     <org.exoplatform.commons.version>4.0.0.Alpha1-unified-search-SNAPSHOT</org.exoplatform.commons.version>
     <org.exoplatform.core.version>2.5.0-GA</org.exoplatform.core.version>
-    <org.exoplatform.ecms.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.ecms.version>
-    <org.exoplatform.forum.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.forum.version>
+    <org.exoplatform.ecms.version>4.0.0.Alpha1-unified-search-SNAPSHOT</org.exoplatform.ecms.version>
+    <org.exoplatform.forum.version>4.0.0.Alpha1-unified-search-SNAPSHOT</org.exoplatform.forum.version>
     <org.exoplatform.jcr.version>1.15.0-GA</org.exoplatform.jcr.version>
     <org.exoplatform.kernel.version>2.4.0-GA</org.exoplatform.kernel.version>
-    <org.exoplatform.social.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.social.version>
-    <org.exoplatform.wiki.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.wiki.version>
+    <org.exoplatform.social.version>4.0.0.Alpha1-unified-search-SNAPSHOT</org.exoplatform.social.version>
+    <org.exoplatform.wiki.version>4.0.0.Alpha1-unified-search-SNAPSHOT</org.exoplatform.wiki.version>
     <org.gatein.portal.version>3.5.0.Final</org.gatein.portal.version>
     <org.gatein.shindig.version>2.0.2.Final-gatein-3</org.gatein.shindig.version>
   </properties>
