--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
     <org.exoplatform.jcr.version>1.15.5-GA-SNAPSHOT</org.exoplatform.jcr.version>
     <!-- GateIn Project Dependencies -->
     <org.gatein.shindig.version>2.0.2.Final-gatein-4</org.gatein.shindig.version>
-    <org.gatein.portal.version>3.5.5.Final</org.gatein.portal.version>
+    <org.gatein.portal.version>3.5.6.Final-SNAPSHOT</org.gatein.portal.version>
     <!-- Platform Project Dependencies -->
     <org.exoplatform.commons.version>4.0.x-SNAPSHOT</org.exoplatform.commons.version>
     <org.exoplatform.ecms.version>4.0.x-SNAPSHOT</org.exoplatform.ecms.version>
