--- a/integ-search-service/pom.xml
+++ b/integ-search-service/pom.xml
@@ -11,9 +11,8 @@
   <name>eXo Integration - Search - Service</name>
   <dependencies>
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <scope>compile</scope>
+      <groupId>org.gatein.portal</groupId>
+      <artifactId>exo.portal.component.portal</artifactId>
     </dependency>
      <dependency>
         <groupId>org.exoplatform.calendar</groupId>
