--- a/pom.xml
+++ b/pom.xml
@@ -42,12 +42,12 @@
     <!-- **************************************** -->
     <org.exoplatform.depmgt.version>8</org.exoplatform.depmgt.version>
     <!-- JCR Project Dependencies -->
-    <org.exoplatform.kernel.version>2.4.4-GA</org.exoplatform.kernel.version>
-    <org.exoplatform.core.version>2.5.4-GA</org.exoplatform.core.version>
-    <org.exoplatform.jcr.version>1.15.4-GA</org.exoplatform.jcr.version>
+    <org.exoplatform.kernel.version>2.4.6-GA-SNAPSHOT</org.exoplatform.kernel.version>
+    <org.exoplatform.core.version>2.5.6-GA-SNAPSHOT</org.exoplatform.core.version>
+    <org.exoplatform.jcr.version>1.15.6-GA-SNAPSHOT</org.exoplatform.jcr.version>
     <!-- GateIn Project Dependencies -->
     <org.gatein.shindig.version>2.0.2.Final-gatein-4</org.gatein.shindig.version>
-    <org.gatein.portal.version>3.5.4.Final</org.gatein.portal.version>
+    <org.gatein.portal.version>3.5.7.Final-SNAPSHOT</org.gatein.portal.version>
     <!-- Platform Project Dependencies -->
     <org.exoplatform.commons.version>4.1.x-commons-stabilization-SNAPSHOT</org.exoplatform.commons.version>
     <org.exoplatform.ecms.version>4.1.x-ecms-stabilization-SNAPSHOT</org.exoplatform.ecms.version>
