--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>org.exoplatform.integration</groupId>
   <artifactId>integ</artifactId>
-  <version>4.1.x-integ-stabilization-SNAPSHOT</version>
+  <version>4.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>eXo Integration</name>
   <modules>
@@ -49,12 +49,12 @@
     <org.gatein.shindig.version>2.0.2.Final-gatein-4</org.gatein.shindig.version>
     <org.gatein.portal.version>3.5.7.Final-SNAPSHOT</org.gatein.portal.version>
     <!-- Platform Project Dependencies -->
-    <org.exoplatform.commons.version>4.1.x-commons-stabilization-SNAPSHOT</org.exoplatform.commons.version>
-    <org.exoplatform.ecms.version>4.1.x-ecms-stabilization-SNAPSHOT</org.exoplatform.ecms.version>
-    <org.exoplatform.social.version>4.1.x-soc-stabilization-SNAPSHOT</org.exoplatform.social.version>
-    <org.exoplatform.forum.version>4.1.x-forum-stabilization-SNAPSHOT</org.exoplatform.forum.version>
-    <org.exoplatform.wiki.version>4.1.x-wiki-stabilization-SNAPSHOT</org.exoplatform.wiki.version>
-    <org.exoplatform.calendar.version>4.1.x-cal-stabilization-SNAPSHOT</org.exoplatform.calendar.version>
+    <org.exoplatform.commons.version>4.1.0-SNAPSHOT</org.exoplatform.commons.version>
+    <org.exoplatform.ecms.version>4.1.0-SNAPSHOT</org.exoplatform.ecms.version>
+    <org.exoplatform.social.version>4.1.0-SNAPSHOT</org.exoplatform.social.version>
+    <org.exoplatform.forum.version>4.1.0-SNAPSHOT</org.exoplatform.forum.version>
+    <org.exoplatform.wiki.version>4.1.0-SNAPSHOT</org.exoplatform.wiki.version>
+    <org.exoplatform.calendar.version>4.1.0-SNAPSHOT</org.exoplatform.calendar.version>
     <!-- Platform Project 3rd party Dependencies -->
     <org.exoplatform.doc.doc-style.version>4.1.0-SNAPSHOT</org.exoplatform.doc.doc-style.version>
   </properties>
